<resources>
    <string name="app_name">Movie App</string>
    <string name="title_activity_detail_movie">Detail Movie</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>

    <string name="title">Title</string>
    <string name="rating">9.9</string>
    <string name="date">%s</string>
    <string name="genre">Music, Drama, History</string>
    <string name="duration">2h 15m</string>
...
